[gd_scene load_steps=5 format=2]

[ext_resource path="res://EditDeck.gd" type="Script" id=1]
[ext_resource path="res://Deck_list_edit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Collection.gd" type="Script" id=3]
[ext_resource path="res://UI/CardRow.tscn" type="PackedScene" id=4]

[node name="EditDeck" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
DeckListEdit = ExtResource( 2 )

[node name="Display" type="Position2D" parent="." index="0"]

position = Vector2( 499.934, 358.854 )

[node name="Display2" type="Position2D" parent="." index="1"]

position = Vector2( 684.012, 360.483 )

[node name="Collection" type="ScrollContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.0
margin_top = 46.0
margin_right = 447.0
margin_bottom = 552.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
script = ExtResource( 3 )
deck = false
row_scene = ExtResource( 4 )

[node name="box" type="VBoxContainer" parent="Collection" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Done" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 972.0
margin_top = 577.0
margin_right = 1018.0
margin_bottom = 597.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Done"
flat = false
align = 1

[node name="Main Menu" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 408.0
margin_top = 571.0
margin_right = 492.0
margin_bottom = 591.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "main Menu"
flat = false
align = 1

[node name="Tabs" type="TabContainer" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 496.0
margin_top = 3.0
margin_right = 986.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
tab_align = 1
tabs_visible = true

[node name="Rename" type="LineEdit" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 872.0
margin_top = 412.0
margin_right = 998.0
margin_bottom = 436.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Deckname"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="Save" type="Button" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 954.0
margin_top = 437.0
margin_right = 995.0
margin_bottom = 457.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save"
flat = false
align = 1

[connection signal="pressed" from="Done" to="." method="_on_Done_pressed"]

[connection signal="pressed" from="Main Menu" to="." method="_on_Main_Menu_pressed"]

[connection signal="tab_changed" from="Tabs" to="." method="_on_Tabs_tab_changed"]

[connection signal="pressed" from="Save" to="Collection" method="_on_Save_pressed"]


